# learning-open-gl

./: CMakeLists.txt  git.sh
modules/: CMakeLists.txt
modules/glad/include/glad/: glad.h
modules/glad/src/: CMakeLists.txt  glad.c
shaders/: CMakeLists.txt  vertex.txt
src/: CMakeLists.txt  config.h  run.cpp  triangle_mesh.cpp  triangle_mesh.h
